Inline the wrappers