@@ -19,10 +19,11 @@ package org.thoughtcrime.securesms;
 import android.content.Intent;
 import android.os.Bundle;
 
+import java.util.stream.Collectors;
+
 import org.signal.core.util.logging.Log;
 import org.thoughtcrime.securesms.contacts.SelectedContact;
 import org.thoughtcrime.securesms.recipients.RecipientId;
-import org.thoughtcrime.securesms.util.StreamUtils;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -57,7 +58,7 @@ public class PushContactSelectionActivity extends ContactSelectionActivity {
   protected final void onFinishedSelection() {
     Intent                resultIntent     = getIntent();
     List<SelectedContact> selectedContacts = contactsFragment.getSelectedContacts();
-    List<RecipientId>     recipients       = StreamUtils.StreamOfCollection(selectedContacts).map(sc -> sc.getOrCreateRecipientId()).toList();
+    List<RecipientId>     recipients       = selectedContacts.stream().map(sc -> sc.getOrCreateRecipientId()).collect(Collectors.toList());
 
     resultIntent.putParcelableArrayListExtra(KEY_SELECTED_RECIPIENTS, new ArrayList<>(recipients));
 
