@@ -27,7 +27,6 @@ import org.thoughtcrime.securesms.recipients.Recipient;
 import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.safety.SafetyNumberRecipient;
 import org.thoughtcrime.securesms.sms.MessageSender;
-import org.thoughtcrime.securesms.util.StreamUtils;
 import org.whispersystems.signalservice.api.SignalSessionLock;
 import org.whispersystems.signalservice.api.push.SignalServiceAddress;
 
@@ -88,11 +87,10 @@ public final class SafetyNumberChangeRepository {
       messageRecord = getMessageRecord(messageId, messageType);
     }
 
-    List<Recipient> recipients = StreamUtils.StreamOfCollection(recipientIds).map(Recipient::resolved).toList();
+    List<Recipient> recipients = recipientIds.stream().map(Recipient::resolved).collect(java.util.stream.Collectors.toList());
 
-    List<ChangedRecipient> changedRecipients = StreamUtils.StreamOfCollection(AppDependencies.getProtocolStore().aci().identities().getIdentityRecords(recipients).getIdentityRecords())
-                                                     .map(record -> new ChangedRecipient(Recipient.resolved(record.getRecipientId()), record))
-                                                     .toList();
+    List<ChangedRecipient> changedRecipients = AppDependencies.getProtocolStore().aci().identities().getIdentityRecords(recipients).getIdentityRecords().stream()
+                                                              .map(record -> new ChangedRecipient(Recipient.resolved(record.getRecipientId()), record)).collect(java.util.stream.Collectors.toList());
 
     Log.d(TAG, "Safety number change state, message: " + (messageRecord != null ? messageRecord.getId() : "null") + " records: " + Util.join(changedRecipients, ","));
 
