@@ -4,13 +4,12 @@ import android.text.TextUtils;
 
 import androidx.annotation.NonNull;
 
-import com.annimon.stream.Stream;
+import java.util.stream.Collectors;
 import com.bumptech.glide.util.ContentLengthInputStream;
 
 import org.signal.core.util.concurrent.SignalExecutors;
 import org.signal.core.util.logging.Log;
 import org.signal.core.util.Util;
-import org.thoughtcrime.securesms.util.StreamUtils;
 
 import java.io.FilterInputStream;
 import java.io.IOException;
@@ -139,11 +138,10 @@ public class ChunkedDataFetcher {
     List<ByteRange> requestPattern;
     try {
       if (firstChunk.isPresent()) {
-        requestPattern = StreamUtils.StreamOfCollection(getRequestPattern(contentLength - firstChunk.get().getSecond()))
-                               .map(b -> new ByteRange(b.start + firstChunk.get().getSecond(),
+        requestPattern = getRequestPattern(contentLength - firstChunk.get().getSecond()).stream()
+                                                                                        .map(b -> new ByteRange(b.start + firstChunk.get().getSecond(),
                                                        b.end   + firstChunk.get().getSecond(),
-                                                       b.ignoreFirst))
-                               .toList();
+                                                       b.ignoreFirst)).collect(Collectors.toList());
       } else {
         requestPattern = getRequestPattern(contentLength);
       }
@@ -154,14 +152,14 @@ public class ChunkedDataFetcher {
     }
 
     SignalExecutors.UNBOUNDED.execute(() -> {
-      List<CallRequestController> controllers = StreamUtils.StreamOfCollection(requestPattern).map(range -> makeChunkRequest(client, url, range)).toList();
+      List<CallRequestController> controllers = requestPattern.stream().map(range -> makeChunkRequest(client, url, range)).collect(Collectors.toList());
       List<InputStream>           streams     = new ArrayList<>(controllers.size() + (firstChunk.isPresent() ? 1 : 0));
 
       if (firstChunk.isPresent()) {
         streams.add(firstChunk.get().getFirst());
       }
 
-      StreamUtils.StreamOfCollection(controllers).forEach(compositeController::addController);
+      controllers.stream().forEach(compositeController::addController);
 
       for (CallRequestController controller : controllers) {
         Optional<InputStream> stream = controller.getStream();
