@@ -3,9 +3,7 @@ package org.thoughtcrime.securesms.payments;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import com.annimon.stream.Stream;
-
-import org.thoughtcrime.securesms.util.StreamUtils;
+import java.util.stream.Collectors;
 
 import java.util.List;
 
@@ -24,17 +22,16 @@ public final class PaymentSubmissionResult {
     if (transactions.isEmpty()) {
       throw new IllegalStateException();
     }
-    this.defrags            = Stream.of(transactions)
-                                    .filter(TransactionSubmissionResult::isDefrag)
-                                    .toList();
-    this.nonDefrag          = Stream.of(transactions)
-                                    .filterNot(TransactionSubmissionResult::isDefrag)
-                                    .findSingle()
-                                    .orElse(null);
-    this.erroredTransaction = Stream.of(transactions)
-                                    .filter(t -> t.getErrorCode() != TransactionSubmissionResult.ErrorCode.NONE)
-                                    .findSingle()
-                                    .orElse(null);
+    this.defrags            = transactions.stream()
+                                          .filter(TransactionSubmissionResult::isDefrag).collect(Collectors.toList());
+    final List<TransactionSubmissionResult> nonDefragTransactions = transactions.stream().filter(x -> !x.isDefrag()).collect(Collectors.toList());
+    if (nonDefragTransactions.size() > 1) throw new IllegalStateException("Too many defrag transaction results!");
+    this.nonDefrag = nonDefragTransactions.isEmpty() ? null : nonDefragTransactions.get(0);
+
+    final List<TransactionSubmissionResult> erroredTransactions = transactions.stream().filter(
+        t -> t.getErrorCode() != TransactionSubmissionResult.ErrorCode.NONE).collect(Collectors.toList());
+    if (erroredTransactions.size() > 1) throw new IllegalStateException("Too many errored transaction results!");
+    this.erroredTransaction = erroredTransactions.isEmpty() ? null : erroredTransactions.get(0);
   }
 
   public List<TransactionSubmissionResult> defrags() {
