@@ -3,12 +3,8 @@ package org.thoughtcrime.securesms.service.webrtc.collections;
 import androidx.annotation.CheckResult;
 import androidx.annotation.NonNull;
 
-import com.annimon.stream.ComparatorCompat;
-import com.annimon.stream.Stream;
-
 import org.thoughtcrime.securesms.events.CallParticipant;
 import org.thoughtcrime.securesms.events.CallParticipantId;
-import org.thoughtcrime.securesms.util.StreamUtils;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -16,6 +12,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 /**
  * Represents the participants to be displayed in the grid at any given time.
@@ -35,9 +32,9 @@ public class ParticipantCollection {
       return 0;
     }
   };
-  private static final Comparator<CallParticipant> COMPLEX_COMPARATOR_CHAIN = ComparatorCompat.chain(HAND_RAISED)
-                                                                                              .thenComparing(MOST_RECENTLY_SPOKEN)
-                                                                                              .thenComparing(LEAST_RECENTLY_ADDED);
+  private static final Comparator<CallParticipant> COMPLEX_COMPARATOR_CHAIN = HAND_RAISED
+      .thenComparing(MOST_RECENTLY_SPOKEN)
+      .thenComparing(LEAST_RECENTLY_ADDED);
 
   private final int                   maxGridCellCount;
   private final List<CallParticipant> participants;
@@ -64,18 +61,17 @@ public class ParticipantCollection {
       List<CallParticipant> newParticipants = new ArrayList<>(participants);
       Collections.sort(newParticipants, COMPLEX_COMPARATOR_CHAIN);
 
-      List<CallParticipantId> oldGridParticipantIds = StreamUtils.StreamOfCollection(getGridParticipants())
-                                                            .map(CallParticipant::getCallParticipantId)
-                                                            .toList();
+      List<CallParticipantId> oldGridParticipantIds = getGridParticipants().stream()
+                                                                           .map(CallParticipant::getCallParticipantId).collect(java.util.stream.Collectors.toList());
 
       for (int i = 0; i < oldGridParticipantIds.size(); i++) {
         CallParticipantId oldId = oldGridParticipantIds.get(i);
 
-        int newIndex = Stream.of(newParticipants)
-                             .takeUntilIndexed((j, p) -> j >= maxGridCellCount)
-                             .map(CallParticipant::getCallParticipantId)
-                             .toList()
-                             .indexOf(oldId);
+        int newIndex = IntStream.range(0, newParticipants.size())
+                                .filter(j -> j >= maxGridCellCount)
+                                .boxed().map(newParticipants::get)
+                                .map(CallParticipant::getCallParticipantId).collect(Collectors.toList())
+                                .indexOf(oldId);
 
         if (newIndex != -1 && newIndex != i) {
           Collections.swap(newParticipants, newIndex, Math.min(i, newParticipants.size() - 1));
