@@ -68,7 +68,6 @@ import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.recipients.RecipientUtil;
 import org.thoughtcrime.securesms.util.ParcelUtil;
 import org.thoughtcrime.securesms.util.SignalLocalMetrics;
-import org.thoughtcrime.securesms.util.StreamUtils;
 import org.whispersystems.signalservice.api.push.DistributionId;
 import org.whispersystems.signalservice.api.util.Preconditions;
 
@@ -298,8 +297,8 @@ public class MessageSender {
       Recipient recipient         = message.getThreadRecipient();
       long      allocatedThreadId = threadTable.getOrCreateValidThreadId(message.getThreadRecipient(), threadId);
 
-      List<AttachmentId> attachmentIds = StreamUtils.StreamOfCollection(preUploadResults).map(PreUploadResult::getAttachmentId).toList();
-      List<String>       jobIds        = StreamUtils.StreamOfCollection(preUploadResults).map(PreUploadResult::getJobIds).flatMap(StreamUtils::StreamOfCollection).toList();
+      List<AttachmentId> attachmentIds = preUploadResults.stream().map(PreUploadResult::getAttachmentId).collect(java.util.stream.Collectors.toList());
+      List<String>       jobIds        = preUploadResults.stream().map(PreUploadResult::getJobIds).flatMap(x -> x.stream()).collect(java.util.stream.Collectors.toList());
 
       if (!attachmentDatabase.hasAttachments(attachmentIds)) {
         Log.w(TAG, "Attachments not found in database for " + message.getThreadRecipient().getId() + ", thread: " + threadId + ", pre-uploads: " + preUploadResults);
@@ -338,16 +337,16 @@ public class MessageSender {
                                         @NonNull Collection<PreUploadResult> preUploadResults,
                                         boolean overwritePreUploadMessageIds)
   {
-    Log.i(TAG, "Sending media broadcast (overwrite: " + overwritePreUploadMessageIds + ") to " + StreamUtils.StreamOfCollection(messages).map(m -> m.getThreadRecipient().getId()).toList());
+    Log.i(TAG, "Sending media broadcast (overwrite: " + overwritePreUploadMessageIds + ") to " + messages.stream().map(m -> m.getThreadRecipient().getId()).collect(java.util.stream.Collectors.toList()));
     Preconditions.checkArgument(messages.size() > 0, "No messages!");
-    Preconditions.checkArgument(StreamUtils.StreamOfCollection(messages).allMatch(m -> m.getAttachments().isEmpty()), "Messages can't have attachments! They should be pre-uploaded.");
+    Preconditions.checkArgument(messages.stream().allMatch(m -> m.getAttachments().isEmpty()), "Messages can't have attachments! They should be pre-uploaded.");
 
     JobManager         jobManager                 = AppDependencies.getJobManager();
     AttachmentTable    attachmentDatabase         = SignalDatabase.attachments();
     MessageTable       mmsDatabase                = SignalDatabase.messages();
     ThreadTable        threadTable                = SignalDatabase.threads();
-    List<AttachmentId> preUploadAttachmentIds     = StreamUtils.StreamOfCollection(preUploadResults).map(PreUploadResult::getAttachmentId).toList();
-    List<String>       preUploadJobIds            = StreamUtils.StreamOfCollection(preUploadResults).map(PreUploadResult::getJobIds).flatMap(StreamUtils::StreamOfCollection).toList();
+    List<AttachmentId> preUploadAttachmentIds     = preUploadResults.stream().map(PreUploadResult::getAttachmentId).collect(java.util.stream.Collectors.toList());
+    List<String>       preUploadJobIds            = preUploadResults.stream().map(PreUploadResult::getJobIds).flatMap(x -> x.stream()).collect(java.util.stream.Collectors.toList());
     List<Long>         messageIds                 = new ArrayList<>(messages.size());
     List<String>       messageDependsOnIds        = new ArrayList<>(preUploadJobIds);
     OutgoingMessage    primaryMessage             = messages.get(0);
@@ -371,9 +370,8 @@ public class MessageSender {
         messageIds.add(primaryMessageId);
       }
 
-      List<DatabaseAttachment> preUploadAttachments = StreamUtils.StreamOfCollection(preUploadAttachmentIds)
-                                                            .map(attachmentDatabase::getAttachment)
-                                                            .toList();
+      List<DatabaseAttachment> preUploadAttachments = preUploadAttachmentIds.stream()
+                                                                            .map(attachmentDatabase::getAttachment).collect(java.util.stream.Collectors.toList());
 
       if (messages.size() > 0) {
         List<OutgoingMessage>    secondaryMessages = overwritePreUploadMessageIds ? messages.subList(1, messages.size()) : messages;
