@@ -6,7 +6,7 @@ import android.database.Cursor;
 import androidx.annotation.NonNull;
 import androidx.annotation.WorkerThread;
 
-import com.annimon.stream.Stream;
+import java.util.stream.Collectors;
 
 import org.signal.core.util.concurrent.SignalExecutors;
 import org.signal.core.util.logging.Log;
@@ -18,7 +18,6 @@ import org.thoughtcrime.securesms.database.model.StickerRecord;
 import org.thoughtcrime.securesms.dependencies.AppDependencies;
 import org.signal.core.util.Hex;
 import org.thoughtcrime.securesms.stickers.StickerManifest;
-import org.thoughtcrime.securesms.util.StreamUtils;
 import org.whispersystems.signalservice.api.SignalServiceMessageReceiver;
 import org.whispersystems.signalservice.api.messages.SignalServiceStickerManifest;
 
@@ -88,9 +87,8 @@ public final class StickerPackPreviewRepository {
                                                                         remoteManifest.getTitle(),
                                                                         remoteManifest.getAuthor(),
                                                                         toOptionalSticker(packId, packKey, remoteManifest.getCover()),
-                                                                        StreamUtils.StreamOfCollection(remoteManifest.getStickers())
-                                                                              .map(s -> toSticker(packId, packKey, s))
-                                                                              .toList());
+                                                                        remoteManifest.getStickers().stream()
+                                                                                      .map(s -> toSticker(packId, packKey, s)).collect(Collectors.toList()));
 
       return Optional.of(new StickerManifestResult(localManifest, false));
     } catch (IOException | InvalidMessageException e) {
