@@ -3,6 +3,8 @@ package org.thoughtcrime.securesms.payments.reconciliation;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
+import java.util.stream.Collectors;
+
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.signal.core.util.logging.Log;
@@ -17,7 +19,6 @@ import org.thoughtcrime.securesms.payments.proto.MobileCoinLedger;
 import org.thoughtcrime.securesms.payments.proto.PaymentMetaData;
 import org.thoughtcrime.securesms.recipients.RecipientId;
 import org.thoughtcrime.securesms.testutil.LogRecorder;
-import org.thoughtcrime.securesms.util.StreamUtils;
 import org.whispersystems.signalservice.api.payments.Money;
 import org.signal.core.util.UuidUtil;
 
@@ -167,7 +168,7 @@ public final class LedgerReconcileTest {
 
     List<Payment> payments = reconcile(localPayments, new MobileCoinLedgerWrapper(ledger));
 
-    assertEquals(Arrays.asList(mob(-1), mob(2.5)), StreamUtils.StreamOfCollection(payments).map(Payment::getAmountWithDirection).toList());
+    assertEquals(Arrays.asList(mob(-1), mob(2.5)), payments.stream().map(Payment::getAmountWithDirection).collect(Collectors.toList()));
     assertEquals("received", payments.get(1).getNote());
   }
 
@@ -180,7 +181,7 @@ public final class LedgerReconcileTest {
 
     List<Payment> payments = reconcile(localPayments, new MobileCoinLedgerWrapper(ledger));
 
-    assertEquals(Arrays.asList(mob(1.5), mob(-2.5), mob(2.5)), StreamUtils.StreamOfCollection(payments).map(Payment::getAmountWithDirection).toList());
+    assertEquals(Arrays.asList(mob(1.5), mob(-2.5), mob(2.5)), payments.stream().map(Payment::getAmountWithDirection).collect(Collectors.toList()));
     assertEquals("received", payments.get(2).getNote());
   }
 
@@ -193,7 +194,7 @@ public final class LedgerReconcileTest {
 
     List<Payment> payments = reconcile(localPayments, new MobileCoinLedgerWrapper(ledger));
 
-    assertEquals(Arrays.asList(mob(2.5), mob(1.5), mob(-2.5), mob(2.5)), StreamUtils.StreamOfCollection(payments).map(Payment::getAmountWithDirection).toList());
+    assertEquals(Arrays.asList(mob(2.5), mob(1.5), mob(-2.5), mob(2.5)), payments.stream().map(Payment::getAmountWithDirection).collect(Collectors.toList()));
     assertEquals("received", payments.get(0).getNote());
   }
 
@@ -207,7 +208,7 @@ public final class LedgerReconcileTest {
 
     List<Payment> payments = reconcile(localPayments, new MobileCoinLedgerWrapper(ledger));
 
-    assertEquals(Arrays.asList(mob(1.5), mob(-2.5), mob(10), mob(20)), StreamUtils.StreamOfCollection(payments).map(Payment::getAmountWithDirection).toList());
+    assertEquals(Arrays.asList(mob(1.5), mob(-2.5), mob(10), mob(20)), payments.stream().map(Payment::getAmountWithDirection).collect(Collectors.toList()));
   }
 
   @Test
@@ -220,8 +221,8 @@ public final class LedgerReconcileTest {
 
     List<Payment> payments = reconcile(localPayments, new MobileCoinLedgerWrapper(ledger));
 
-    assertEquals(Arrays.asList(20L, 15L, 0L, 10L), StreamUtils.StreamOfCollection(payments).map(Payment::getBlockIndex).toList());
-    assertEquals(Arrays.asList(mob(-2.5), mob(10), mob(20), mob(2.5)), StreamUtils.StreamOfCollection(payments).map(Payment::getAmountWithDirection).toList());
+    assertEquals(Arrays.asList(20L, 15L, 0L, 10L), payments.stream().map(Payment::getBlockIndex).collect(Collectors.toList()));
+    assertEquals(Arrays.asList(mob(-2.5), mob(10), mob(20), mob(2.5)), payments.stream().map(Payment::getAmountWithDirection).collect(Collectors.toList()));
   }
 
   private static @NonNull List<Payment> reconcile(@NonNull Collection<Payment> localPaymentTransactions,
